# rtrt

./: .gitignore  CMakeLists.txt  Makefile  README.md  cuda_utils.cuh  imgui.ini  main.cpp  main.cu  ray.cuh  ray.h  texturegpu.cu  texturegpu.cuh  viewport.cpp  viewport.cu  viewport.cuh  viewport.h  window.cpp  window.hpp
src/: main.cu
src/frontend/: texturegpu.cu  texturegpu.cuh  window.cpp  window.hpp
src/hitable/: hitable.cuh  hitable_list.cu  hitable_list.cuh  sphere.cu  sphere.cuh
src/kernels/: chapter_11_kernel.cu  chapter_2_kernel.cu  chapter_3_kernel.cu  chapter_4_kernel.cu  chapter_5_kernel.cu  chapter_6_kernel.cu  chapter_7_kernel.cu  chapter_8_kernel.cu  extra.cu  extra.cuh  kernels.cuh  raytracing.cu  sky.cu
src/material/: dielectric.cuh  lambertian.cuh  material.cuh  metal.cuh
src/math/: camera.cuh  math.cu  math.cuh  ray.cuh  vec3.cuh
src/utils/: config.cuh  cuda_utils.cuh  cuda_vector.cuh  managed_ptr.cuh  world.cuh
